--- a/client/src/components/Layout.css
+++ b/client/src/components/Layout.css
@@ -38,3 +38,38 @@ height: 82vh;
     background-color: #222831;
     color: #EEEEEE;
 }
+.menu{
+
+    margin-top: 100px;
+}
+.menu-item{
+    padding: 10px 0;
+    
+    border-radius: 10px;
+    margin-top: 10px;
+    -webkit-transition: background-color 400ms ease-out;
+    -moz-transition: background-color 400ms ease-out;
+    -o-transition: background-color 400ms ease-out;
+    transition: background-color 400ms ease-out;
+
+}
+.menu-item a{
+    color: #eeeeeeae;
+    text-decoration: none;
+    font-size: 18px;
+}
+.menu-item i{
+    color: #eeeeeea8;
+    text-decoration: none;
+    font-size: 18px;
+    margin: 0 15px;
+}
+.active-menu-item{
+    color: #EEEEEE;
+    background-color: rgba(0, 255, 255, 0.394);
+}
+.menu-item:hover{
+    color: #EEEEEE;
+    background-color: rgba(0, 255, 255, 0.156);
+ 
+}
