--- a/client/src/components/Layout.css
+++ b/client/src/components/Layout.css
@@ -1,3 +1,5 @@
+
+
 .main{
     padding: 20px;  
     height: 100vh;
@@ -48,7 +50,7 @@ height: 82vh;
 }
 .menu{
 padding: 0 10px;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 .menu-item{
     padding: 10px 0;
@@ -94,4 +96,18 @@ padding: 0 10px;
     .menu{
         padding: 0 0px;
     }
+}
+.linkProfile{
+
+    color: #EEEEEE !important;
+    background-color: #00acb5 !important;
+    font-size: 19px !important;
+    text-decoration: underline !important;
+    border-radius: 10px !important;
+}
+.Title{
+padding: 10px;
+font-weight: bold;
+
+
 }
