doctor list in table + daily backup

--- a/client/src/components/Layout.css
+++ b/client/src/components/Layout.css
@@ -34,7 +34,7 @@ justify-content: space-between;
 .body{
     padding: 18px;
     width: 100%;
-    background-color: whitesmoke;
+    background-color: white;
     border-radius: 20px;
     box-shadow:  0 0 2px grey;
 height: 82vh;
